--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  margin: 10px auto 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  width: 312px;
+  height: 312px;
+  border: 2px solid black;
+  overflow: hidden;
+  background-color: black;
+}
+
+.x {
+  background-image: url(x.png);
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.o {
+  background-image: url(o.png);
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.empty {
+  background-color: deepskyblue;
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.empty:hover {
+  background-color: dodgerblue;
+}
+
+.result {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.result div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.result div h2 {
+  text-align: center;
+}
+
+.reset_btn {
+  display: block;
+  margin: 10px auto;
+  background-color: white;
+  font-size: 19px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border: 2px solid black;
+  padding: 5px 15px;
+  transition: 0.3s;
+}
+
+.reset_btn:hover {
+  font-size: 24px;
+  padding: 10px 30px;
+  background-color: black;
+  color: white;
+}
+
+.human_btn {
+  display: block;
+  margin: 10px auto;
+  background-color: white;
+  font-size: 19px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border: 2px solid black;
+  padding: 5px 15px;
+  transition: 0.3s;
+}
+
+.bot_btn {
+  display: block;
+  margin: 10px auto;
+  background-color: black;
+  font-size: 19px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border: 2px solid black;
+  padding: 5px 15px;
+  color: white;
 }
